# gnome-terminal

./: Makefile.am  meson.build  meson_options.txt
help/: Makefile.am  meson.build
src/: Makefile.am  meson.build  nautilus.map  terminal-app.c  terminal-app.h  terminal-headerbar.ui  terminal-headermenu.ui  terminal-prefs.c  terminal.common.css
