option('enable-distro-packaging', type: 'boolean', value: false, description: 'Enable when building a distro package')
option('enable-schemas-compile', type: 'boolean', value: true, description: 'Enable regeneration of gschemas.compiled on install')
option('with-dbus-interface-dir', type: 'string', value: '', description: 'dbus interace file directory')
option('with-dbus-service-dir', type: 'string', value: '', description: 'dbus service file directory')
option('enable-search-provider', type: 'boolean', value: true, description: 'Enable gnome-shell search provider')
option('enable-gterminal', type: 'boolean', value: true, description: 'Enable gterminal')
option('enable-migration', type: 'boolean', value: true, description: 'Enable prefs migration from GConf to GSettings')
option('with-nautilus-dir', type: 'string', value: '', description: 'Nautilus extensions directory')
option('enable-nautilus-extension', type: 'boolean', value: true, description: 'Enable nautilus extension')
